# drf_cars

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/apps/auth_user/auth/: apps.py  urls.py  views.py
backend/apps/auth_user/user/: apps.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/cars/adverts/: apps.py  filter.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/cars/brand/: serializers.py  urls.py
backend/apps/chat/: consumers.py  models.py  routing.py
backend/apps/currency/: models.py  serializers.py  urls.py  views.py
backend/apps/posts/: filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/profile_staff/: apps.py  models.py  serializer.py  views.py
backend/apps/user_sessions/: apps.py  models.py
backend/apps/visits_count/: apps.py  models.py  services.py
backend/configs/: __init__.py  asgi.py  celery.py  routing.py  settings.py  urls.py
backend/configs/extra_configs/: __init__.py  rest_config.py
backend/core/: pagination.py
backend/core/checkers/: profanity_checker.py
backend/core/enums/: action_token_enum.py  regex_enum.py
backend/core/groups/: staff_dealership_groups.py
backend/core/handlers/: error_handler.py
backend/core/middlewares/: socket_middleware.py
backend/core/permissions/: staff_dealership_permissions.py
backend/core/services/: avg_prices_service.py  currency_service.py  email_service.py  file_service.py  jwt_service.py  sessions_service.py
backend/templates/: recovery.html  registration.html  spam.html  test_email.html
(+36 files in other folders)
